temp/todo-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: todo-waf-basic
  namespace: todo
spec:
  headers:
    customRequestHeaders:
      X-WAF-Protection: "enabled"
      X-Content-Type-Options: "nosniff"
      X-XSS-Protection: "1; mode=block"
      X-Frame-Options: "DENY"
      Referrer-Policy: "no-referrer"
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: todo-ratelimit
  namespace: todo
spec:
  rateLimit:
    average: 10
    burst: 20
