temp/fluentd-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluentd
  namespace: todo
  labels:
    app: fluentd
spec:
  selector:
    matchLabels:
      app: fluentd
  template:
    metadata:
      labels:
        app: fluentd
    spec:
      containers:
        - name: fluentd
          image: fluent/fluentd:v1.14-debian-1
          volumeMounts:
            - name: var-log
              mountPath: /var/log
            - name: fluentd-config
              mountPath: /fluentd/etc
      volumes:
        - name: var-log
          hostPath:
            path: /var/log
        - name: fluentd-config
          configMap:
            name: fluentd-config
