temp/modsecurity-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: modsecurity-service
  namespace: todo
spec:
  selector:
    app: modsecurity
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
